--- a/www/components/records/records.html
+++ b/www/components/records/records.html
@@ -1,6 +1,7 @@
 
-<ons-page  ons-show="load_records()" ng-controller="RecordsController as rc" >
-    <div class="content" style="text-align: center">
+
+<ons-page  ons-show="load_records()" >
+    <div class="content" style="text-align: center" ng-controller="RecordsController">
         <ons-button ng-click="startRecording()" ng-disabled="recording">Start Recording</ons-button>
         <ons-button ng-click="stopRecording()" ng-disabled="!recording">Stop</ons-button>
         <ons-list id="record_list">
@@ -8,4 +9,6 @@
         </ons-list>
 
     </div>
+
+
 </ons-page>
